--- a/UFO-level-1/static/style.css
+++ b/UFO-level-1/static/style.css
@@ -8,6 +8,7 @@
     height: 100%;
     padding: 0;
     margin: 0;
+    background-color: #314a10;
   }
   
   /* The wrapper contains all of the page's content besides the footer, which is pushed to the bottom of the page */
@@ -35,7 +36,7 @@
     bottom: 0;
     left: 0;
     padding: 5px;
-    background: #1b3146;
+    background: #1c3110;
   }
   
   .navbar {
@@ -59,10 +60,16 @@
   
   .filters .panel-body {
     padding: 0;
+    background-color: #7da368;
   }
   
+  .panel-default .panel-header {
+    background-color: #7da368;
+  }
+
   .filters {
     margin-top: 10px;
+
   }
   
   select {
@@ -105,7 +112,8 @@
   }
   
   .hero h1 {
-    margin-top: 200px;
+    margin-top: 400px;
+    margin-right: 400px;
     font-size: 0.1rem;
     animation: title 1.2s forwards linear;
   }
@@ -113,6 +121,7 @@
   .hero p {
     font-size: 2rem;
     opacity: 0;
+    margin-right: 400px;
     animation: subtitle 1.2s forwards linear;
     animation-delay: 1.2s;
   }
