--- a/UFO-level-1/static/style.css
+++ b/UFO-level-1/static/style.css
@@ -62,6 +62,7 @@
   /* Adding styles to the aside and filter form */
   .ufo-form {
     margin-top: 50px;
+    background-color: #7da368;
   }
   
   .btn-default {
@@ -87,7 +88,7 @@
   }
   .filters {
     margin-top: 10px;
-
+    background-color: #7da368;
   }
   
   select {
@@ -127,6 +128,7 @@
     background-attachment: fixed;
     background-position: bottom center;
     background-size: cover;
+    color: aliceblue;
   }
   
   .hero h1 {
